--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div> -->
 
         <div class="submission-row">
+            <button id="random-key">⟳</button>
             <input id="encryption-key" placeholder="Encryption key"/>
             <button id="encrypt-btn">Encrypt</button>
             <button id="decrypt-btn">Decrypt</button>
